<resources>
    <string name="app_name">gst</string>
    <string name="gst_billing">GST BILLING</string>
    <string name="name">Name :</string>
    <string name="description">Description :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="total_price">Total price :</string>
    <string name="quantity">Quantity :</string>
    <string name="gst_rate">Gst Rate :</string>
    <string name="net_price">Net Price :</string>
    <string name="gst_amount">Gst Amount :</string>
    <string name="poultry_products_dairy_products_food_items_cosmetics_accessories_stationery"><![CDATA[Poultry Products,Dairy Products,Food Items,Cosmetics & Accessories,Stationery]]></string>
    <string name="beverages_coffee_tea_juices_fuel_kerosene_lpg_coal_solar_panels_medical_goods_medicines_stents">Beverages – Coffee, Tea, Juices,Fuel – Kerosene, LPG, Coal,Solar Panels,Medical Goods - Medicines, Stents</string>
    <string name="dairy_products_butter_cheese_ghee_ayurvedic_medicine_mobile_phones">Dairy Products – Butter, Cheese, Ghee,Ayurvedic Medicine,Mobile Phones</string>
    <string name="gst_product_rates">Gst product rates</string>
    <string name="gst_rates">Gst rates</string>
    <string name="products">Products</string>
    <string name="_0">0%</string>
    <string name="_5">5%</string>
    <string name="_12">12%</string>
    <string name="_18">18%</string>
    <string name="_28">28%</string>
    <string name="dairy_products_ice_cream_preserved_vegetables_biscuits_iron_and_steel_products">Dairy Products – Ice Cream,Preserved Vegetables,Biscuits,Iron and Steel Products,</string>
    <string name="textview">TextView</string>
</resources>