<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_dashboard">


    <TextView
        android:id="@+id/textView26"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/gst_product_rates"
        android:textAlignment="center"
        android:textColor="#EF2A2A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="5dp"
        android:layout_marginTop="76dp"
        android:background="@color/black"
        android:backgroundTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="214dp"
        android:layout_height="60dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="136dp"
        android:text="@string/poultry_products_dairy_products_food_items_cosmetics_accessories_stationery"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider7"
        android:layout_width="409dp"
        android:layout_height="5dp"
        android:layout_marginTop="128dp"
        android:background="@color/black"
        android:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="5dp"
        android:layout_marginTop="452dp"
        android:background="@color/black"

        android:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider6"
        android:layout_width="5dp"
        android:layout_height="378dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="76dp"

        android:background="@color/black"
        android:backgroundTint="#000000"
        app:layout_constraintStart_toStartOf="@+id/divider9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="92dp"
        android:text="@string/gst_rates"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="142dp"
        android:layout_height="35dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="92dp"
        android:text="@string/products"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="40dp"
        android:layout_height="34dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="148dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider8"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginTop="192dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="40dp"
        android:layout_height="34dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="208dp"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider9"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="248dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="54dp"
        android:layout_height="32dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="272dp"
        android:text="@string/_12"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider10"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginTop="316dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="53dp"
        android:layout_height="28dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="336dp"
        android:text="@string/_18"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider11"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="376dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="53dp"
        android:layout_height="32dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="392dp"
        android:text="@string/_28"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="192dp"
        android:text="@string/beverages_coffee_tea_juices_fuel_kerosene_lpg_coal_solar_panels_medical_goods_medicines_stents"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="203dp"
        android:layout_height="56dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="260dp"
        android:text="@string/dairy_products_butter_cheese_ghee_ayurvedic_medicine_mobile_phones"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="213dp"
        android:layout_height="49dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="324dp"
        android:text="@string/dairy_products_ice_cream_preserved_vegetables_biscuits_iron_and_steel_products"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="384dp"
        android:text="Chocolates,Alcohols,Fireworks,speakers,cameras,household appliances"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="414dp"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="516dp"
        android:text="Please refer the documentation to understand the details about GST and its rates in the admin Login page .By clicking the reference."
        android:textColor="#3582A5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="632dp"
        android:text="Click on the below add details button to fill the details of your products."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="708dp"
        android:text="Add details"
        android:textColor="#40C4FF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>